--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,11 @@
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#change db properties if necessary
+spring.datasource.url=jdbc:mysql://localhost:3306/sostis?useUnicode=true&characterEncoding=UTF-8
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=none
+
 spring.mvc.view.prefix=/WEB-INF/view/
 spring.mvc.view.suffix=.jsp
+
+spring.liquibase.change-log=classpath:liquibase/db-changelog-master.xml
