--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,11 @@
       <artifactId>tomcat-embed-jasper</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.json</groupId>
+      <artifactId>json</artifactId>
+      <version>20190722</version>
+    </dependency>
+    <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
       <version>1.18.10</version>
